--- a/app.json
+++ b/app.json
@@ -3,10 +3,7 @@
     "name": "Now UI React Native",
     "slug": "now-ui-react-native",
     "privacy": "public",
-    "platforms": [
-      "ios",
-      "android"
-    ],
+    "platforms": ["ios", "android"],
     "version": "1.4.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -18,9 +15,10 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
+    "android": {
+      "enableHermes": false
+    },
     "ios": {
       "supportsTablet": true
     },
