--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "typescript": "^4.9.4"
   },
   "devDependencies": {
+    "@types/react-native": "^0.71.6",
     "babel-eslint": "10.0.3",
     "babel-preset-expo": "^9.3.0"
   },
