--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native": "0.71.8",
     "react-native-config": "^1.5.1",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "6.1.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
